Added knockback physics and incorporated hurt animations

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -33,16 +33,25 @@
 		standing_jump: -1000,
 	
 	#-------Damage Based Functions-------#
+	//Function that initiates an invincibility check, damage calculation, and hurt animations.
 		take_damage: "def()[
 				//if you aren't currently invincible, take damage
 				if(not self.invincible,[
 					dump(arg.collide_with_damage),
-					damage_flash(),
+					take_knockback(),
 					//add(me.hitpoints, -collide_with.damage), //subtract hitpoints
 					if(me.hitpoints <= 0, die()),
 					set(invincible, 50),
 				]),
 					]",
+	
+	//This starts the knockback animation that also makes the player go flying.
+		take_knockback: "def()[
+			//damage_flash(),
+			set(velocity_y, -500),
+			set(velocity_x, (-facing * 250)),
+			set(animation, 'hurt_weak'), //this might change depending on the amount of damage taken
+		]",
 		//This sets the object to turn red for a brief moment and then change back to a normal color again
 		//It calls two other functions, set_red() and reset_color()			
 		damage_flash: "def() [
@@ -132,28 +141,28 @@
 
 
 //-------------------------------JUMPING---------------------------------			
-on_ctrl_jump:"[if(is_standing and punch_finished, 
-					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
-				
-					if (animation != [jump_animations], set(animation, 'prejump')),
-					set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
-					//add some x velocity to increase jump distance.
-					if(self.animation in ['crouch'], 
-					set(velocity_y,crouch_jump), 
-				)])]",
-on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
+	on_ctrl_jump:"[if(is_standing and punch_finished, 
+		[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
+
+		if (animation not in jump_animations, set(animation, 'prejump')),
+		set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
+		//add some x velocity to increase jump distance.
+		if(self.animation in ['crouch'], 
+		set(velocity_y,crouch_jump), 
+	)])]",
+	on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
 
 
 //-----------------------------COLLISIONS----------------------------------
-on_collide_object_body: "[
-	[if(arg.collide_with_area = 'projectile', 
-		[debug('Player was hit'), 
-		take_damage(), //The player takes damage
-		])],
-	[if(arg.collide_with_area = 'enemy', 
-		[debug('Ran into the enemy'), 
-		take_damage(), //The Player takes damage
-		])] ]",
+	on_collide_object_body: "[
+		[if(arg.collide_with_area = 'projectile', 
+			[debug('Player was hit'), 
+			take_damage(), //The player takes damage
+			])],
+		[if(arg.collide_with_area = 'enemy', 
+			[debug('Ran into the enemy'), 
+			take_damage(), //The Player takes damage
+			])] ]",
 
 
 //---------------------ON END ANIMATION ---------------------------------------
@@ -164,26 +173,29 @@ on_collide_object_body: "[
 	on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
 	on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
 	
-on_end_axehandle_anim: "set(animation,'fall')",
-on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')))",
-on_end_walk_anim: "set(animation,animation)", //continues the animation
-on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
-on_end_jump_anim:"set(animation,'fall')",
-on_end_prejump_anim:"set(animation,'jump')",
-on_collide_feet:"[if(self.animation not in ['fallstomp','landstomp','endstomp'], 
-					[set(animation,'stand'),set(velocity_x, 0)]),
-				if(self.animation in ['fallstomp'],[set(animation,'landstomp'),set(last_attacked,cycle),set(velocity_y,0)])
-				]",
+	on_end_axehandle_anim: "set(animation,'fall')",
+	on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')))",
+	on_end_walk_anim: "set(animation,animation)", //continues the animation
+	on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
+	on_end_jump_anim:"set(animation,'fall')",
+	on_end_prejump_anim:"set(animation,'jump')",
+	on_collide_feet:"[
+		if(self.animation not in stomp_animations, 
+			[set(animation,'stand'),set(velocity_x, 0)]),
+		if(self.animation in ['fallstomp'],
+			[set(animation,'landstomp'),set(last_attacked,cycle),set(velocity_y,0)])
+			]",
 				
 //Modify the velocity_y below to change the speed of the fall.
-on_end_beginstomp_anim:"[set(animation,'fallstomp'),set(velocity_y,2000), set(velocity_x, 0)]",
-on_end_landstomp_anim:"[if(stompCount > 3,
-							[set(animation,'endstomp'),set(stompCount, 0),set(last_attacked,cycle)]),
-						if(stompCount <= 3,
-							[ 
-							set(stompCount, stompCount+1), 
-							set(animation, 'landstomp'),
-							])
+	on_end_beginstomp_anim:"[set(animation,'fallstomp'),set(velocity_y,2000), set(velocity_x, 0)]",
+	on_end_landstomp_anim:"[
+		if(stompCount > 3,
+			[set(animation,'endstomp'),set(stompCount, 0),set(last_attacked,cycle)]),
+		if(stompCount <= 3,
+			[ 
+			set(stompCount, stompCount+1), 
+			set(animation, 'landstomp'),
+			])
 	]",
 on_end_endstomp_anim:"set(animation,'stand')",
 
