--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -37,6 +37,7 @@
 		take_damage: "def()[
 				//if you aren't currently invincible, take damage
 				if(not self.invincible,[
+				//NEED TO FIX
 					dump(arg.collide_with_damage),
 					take_knockback(),
 					//add(me.hitpoints, -collide_with.damage), //subtract hitpoints
@@ -50,6 +51,7 @@
 			//damage_flash(),
 			set(velocity_y, -500),
 			set(velocity_x, (-facing * 250)),
+			//if(collide_with.damage > threshold, set animation, set other animation)
 			set(animation, 'hurt_weak'), //this might change depending on the amount of damage taken
 		]",
 		//This sets the object to turn red for a brief moment and then change back to a normal color again
