Added new punch animations to M's object.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -265,6 +265,27 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		duration: 4,
 		},
 		{
+		id: "punch2",
+		rect: [71,73,102,105],
+		frames:3,
+		frames_per_row: 3,
+		duration: 4,
+		},
+		{
+		id: "punch3_charge",
+		rect: [36,109,67,141],
+		frames:1,
+		frames_per_row: 1,
+		duration: 4,
+		},
+		{
+		id: "punch3",
+		rect: [71,109,102,141],
+		frames:1,
+		frames_per_row: 1,
+		duration: 4,
+		},
+		{
 		id: "beginuppercut",
 		rect: [1,325,32,362],
 		solid_area: [20,37,10,5],
