Added some new attacks for Miyamoto Brown; started adding a guard system.

--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -1,7 +1,4 @@
-/* 
-The Enemy Ship Prototype gives all of these properties to anything that has the prototype: "enemy ship" in the code.
-This prototype sets the protocol for death, as well as collision detection and the standard bullets
-*/
+
 
 {
 	id: "enemy_ground",
@@ -13,7 +10,6 @@ properties: {
 //It then does a check to see if the hitpoints have reached 0.
 //If it has, then the current object dies.
 get_hurt: "def()[add(hitpoints, -collide_with.damage),
-			//debug(hitpoints),
 			damage_flash(),
 			if(hitpoints <= 0, die())
 			]",
@@ -25,6 +21,10 @@ damage_flash: "def() [
 	schedule(3, reset_color()),	//back to normal
 	schedule(6, set_flash()), 		//and red again
 	schedule(9, reset_color()),	//and back to normal again
+	]",
+	
+get_stun: "def() [
+	
 	]",
 
 //This sets the red channel to full and lowers the other two channels	
