--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -33,7 +33,9 @@ prototype: ["enemy_ground"],
 
 //vars are built in variables that aren't modified by the editor
 vars:{
+	
 	last_triggered: -400,
+	type: "int",
 	triggered: false,
 	
 	},
