--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "0868B2F0",
+			"_addr": "0839CCE0",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -13,12 +13,12 @@
 				"objects": []
 			},
 			"type": "miyamoto_playable",
-			"x": -288,
-			"y": 224,
+			"x": -480,
+			"y": -608,
 			"zorder": 0
 		},
 		{
-			"_addr": "086BE890",
+			"_addr": "0839D160",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_980",
@@ -27,7 +27,7 @@
 			"y": 96
 		},
 		{
-			"_addr": "086BECC0",
+			"_addr": "0AA98F30",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_2a05",
@@ -35,6 +35,7 @@
 			"vars": {
 				"last_triggered": -400,
 				"triggered": false,
+				"type": "int",
 				"x2_bound": 278,
 				"x_bound": 28,
 				"y2_bound": 493,
@@ -44,17 +45,17 @@
 			"y": 319
 		},
 		{
-			"_addr": "086BF0F0",
+			"_addr": "0AA99360",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
 			"label": "_60c",
 			"type": "test_enemy",
-			"x": 0,
+			"x": 22,
 			"y": 319
 		},
 		{
-			"_addr": "086CA2D8",
+			"_addr": "084E5D98",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
@@ -62,9 +63,63 @@
 			"type": "killah_bee",
 			"x": 1475,
 			"y": 2021
+		},
+		{
+			"_addr": "084E61C8",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_1314",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 214,
+				"x_bound": -36,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": 42,
+			"y": 319
+		},
+		{
+			"_addr": "084E65F8",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_5ab6",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 150,
+				"x_bound": -100,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": 16,
+			"y": 319
+		},
+		{
+			"_addr": "084E6A28",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_b43",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 342,
+				"x_bound": 92,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": 208,
+			"y": 319
 		}
 	],
-	"dimensions": [-384,0,1983,2303],
+	"dimensions": [-1280,-992,1983,2303],
 	"id": "titlescreen.cfg",
 	"music": "",
 	"preloads": "",
@@ -79,20 +134,44 @@
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,dgr,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,,,,,,,,,,,,,,,,,,,,,dgr,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
-dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,
+,
+,
+,
+dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
 ,
 ,
 ,
@@ -142,12 +221,12 @@ dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,db
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
-		"x": -384,
+		"x": -1280,
 		"x_speed": 100,
-		"y": 0,
+		"y": -768,
 		"y_speed": 100,
 		"zorder": 0
 	},
