Updated damage types and velocities from abilities.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "0839CCE0",
+			"_addr": "08B08B08",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -13,21 +13,21 @@
 				"objects": []
 			},
 			"type": "miyamoto_playable",
-			"x": -480,
-			"y": -608,
+			"x": -675,
+			"y": 92,
 			"zorder": 0
 		},
 		{
-			"_addr": "0839D160",
+			"_addr": "0887AEB0",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_980",
 			"type": "killah_bee",
-			"x": 384,
-			"y": 96
+			"x": 608,
+			"y": 256
 		},
 		{
-			"_addr": "0AA98F30",
+			"_addr": "0887B2F8",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_2a05",
@@ -45,17 +45,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0AA99360",
-			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
-			"label": "_60c",
-			"type": "test_enemy",
-			"x": 22,
-			"y": 319
-		},
-		{
-			"_addr": "084E5D98",
+			"_addr": "0887B740",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
@@ -65,7 +55,7 @@
 			"y": 2021
 		},
 		{
-			"_addr": "084E61C8",
+			"_addr": "0887BB88",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_1314",
@@ -83,7 +73,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "084E65F8",
+			"_addr": "0887BFD0",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_5ab6",
@@ -101,7 +91,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "084E6A28",
+			"_addr": "0887C418",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_b43",
@@ -116,6 +106,78 @@
 				"y_bound": 220
 			},
 			"x": 208,
+			"y": 319
+		},
+		{
+			"_addr": "08955930",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_72af",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": -810,
+				"x_bound": -1060,
+				"y2_bound": 206,
+				"y_bound": -44
+			},
+			"x": -960,
+			"y": 95
+		},
+		{
+			"_addr": "08955D78",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_1326",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 406,
+				"x_bound": 156,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": 256,
+			"y": 319
+		},
+		{
+			"_addr": "089561C0",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_4e1",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 118,
+				"x_bound": -132,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": -32,
+			"y": 319
+		},
+		{
+			"_addr": "08956608",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_14fb",
+			"type": "knife_thug",
+			"vars": {
+				"last_triggered": -400,
+				"triggered": false,
+				"type": "int",
+				"x2_bound": 86,
+				"x_bound": -164,
+				"y2_bound": 470,
+				"y_bound": 220
+			},
+			"x": -64,
 			"y": 319
 		}
 	],
@@ -138,34 +200,34 @@
 ,
 ,
 ,
-dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,,dgr,dgr,dgr
+,dgr,dgr,dgr
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,dbr,dbr,,,dbr,dbr,,,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
