--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -120,12 +120,11 @@ properties: {
 		damage: 2,	
 		},
 	{
-		id: "knockback",
+		id: "death_light",
 		rect: [71, 37, 102, 69],	
-		body_area:"all",
+		body_area:"none",
 		frames: 1,
 		duration: 5,
-		damage: 2,	
 		},
 		],
 
