--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -2,7 +2,7 @@
 
 {
 	id: "enemy_ground",
-
+	prototype: ["force_list"],
 		
 properties: {
 
@@ -11,9 +11,12 @@ properties: {
 //If it has, then the current object dies.
 get_hurt: "def()[add(hitpoints, -collide_with.damage),
 			damage_flash(),
-			if(hitpoints <= 0, die())
-			]",
+			if(hitpoints <= 3,[
+				schedule(30, die()),
+			]),
+		]",
 
+		
 //This sets the object to turn red for a brief moment and then change back to a normal color again
 //It calls two other functions, red() and reset_color()			
 damage_flash: "def() [
@@ -23,9 +26,9 @@ damage_flash: "def() [
 	schedule(9, reset_color()),	//and back to normal again
 	]",
 	
-get_stun: "def() [
-	
-	]",
+//get_stun: "def() [
+//	
+//	]",
 
 //This sets the red channel to full and lowers the other two channels	
 set_flash: "def() [
