--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -38,7 +38,7 @@
 		type:"int",
 		default: 0,
 		},
-		punch_finished:"cycle - last_attacked > 24",
+		punch_finished:"cycle - last_attacked > 16",
 		punchcombo1_finished:"cycle - last_attacked < 16",
 		punchcombo2_finished:"cycle - last_attacked < 16",
 		uppercut_finished:"cycle - last_uppercut > 24",
@@ -106,41 +106,56 @@
 		jump_animations: "['prejump', 'jump', 'fall']",
 		attack_animations: "punch_animations + uppercut_animations + kick_animations + stomp_animations",
 
+	
+	#-------Health & Stamina-------#
+	
+	mana_costs: "{	'punch2' : 1, 'super_punch2' : 2, 'punch3' : 1, 'super_punch3' : 2, 'charged_punch3' : 4, 'rising_star' : 2, 'super_rising_star' : 4,
+					'charged_rising_star': 5, 'emperor_stomp': 6, 'god_emperor_stomp': 10, 'boomerang': 3, 'kaboomerang': 6,
+					'guard': 1, 'backjump': 2,
+				}",
+	use_mana_for_ability: "def(string ability_name) -> commands [
+			add(mana, -mana_costs[ability_name]),
+		]",
+	
+	
+	
 	},
 	
 	
 	on_process:"[
 		//------------------------------WALKING----------------------------------
-		if(ctrl_right and is_standing and punch_finished and animation not in ['crouch'] + stomp_animations, [
+		if(ctrl_right and is_standing and punch_finished and not animation in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations, [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left and is_standing and punch_finished and animation not in stomp_animations, [
+		if(ctrl_left and is_standing and punch_finished and not animation in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations and not 'd' in ctrl_keys, [
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in punch_animations + uppercut_animations + stomp_animations), //allows a list of excluded animations
-			[set(animation, 'stand')]),
+		if((not(ctrl_left or ctrl_right))and(is_standing) and (not animation in ['crouch', 'guard_crouch', 'guard_stand'] + attack_animations + uppercut_animations + stomp_animations), //allows a list of excluded animations
+			[set(animation, 'stand'), set(velocity_x, 0)]),
 			
 			
 		//-------------------------------CROUCHING-------------------------------
-		if ((ctrl_down and self.animation in ['stand','crouch','walk', 'punch3_end', 'guard_crouch'] and self.animation not in attack_animations), 
+		if ((ctrl_down and self.animation in ['stand','crouch','walk', 'punch3_end'] and self.animation not in attack_animations), 
 		[
 			set(animation, 'crouch'),
 			set(velocity_x, 0)]),	
-		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
-		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
+		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1), set(velocity_x, 0)]),
+		if ((ctrl_right and self.animation='crouch'),[ set(facing,1), set(velocity_x, 0)]),
 		//-------------------------------ATTACKING-------------------------------
 	
 		
-	if('d' in ctrl_keys and not ctrl_down and punch_finished and is_standing and animation not in ['crouch', 'guard_crouch'] + attack_animations,
+	if('d' in ctrl_keys and not ctrl_down and punch_finished and is_standing and self.animation in ['stand', 'walk', 'guard_crouch'] and animation not in ['crouch'] + attack_animations,
 			[
-			set(animation, 'guard_stand'), 
+			set(animation, 'guard_stand'),
+			set(velocity_x, 0),		
 			]),
 	
-	if('d' in ctrl_keys and ctrl_down and punch_finished and self.animation in ['crouch','walk','guard_stand','punch3_end'] and is_standing and animation not in ['stand'] + attack_animations,
+	if('d' in ctrl_keys and ctrl_down and punch_finished and is_standing and self.animation in ['crouch','walk','punch3_end', 'guard_stand'] and animation not in ['stand'] + attack_animations,
 			[
 			set(animation, 'guard_crouch'), 
+			set(velocity_x, 0),	
 			])
 	
 	
@@ -167,7 +182,7 @@
 			
 //-GROUND ATTACKS ****************************************************************************************
 		//-BASIC COMBO ***********************************************************************************
-		if(ctrl_tongue and not ctrl_up and animation != 'punch1' and is_standing and not animation in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+		if(ctrl_tongue and not ctrl_up and not ctrl_down and is_standing and not animation in ['punch1', 'crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
 			if(punch_finished,
 				[set(animation, 'punch1'),
 				set(punch_count, 1), 
@@ -177,7 +192,7 @@
 				
 			])),
 		//If attacking again within 12 frames of last_attacked being cycled
-		if(punchcombo1_finished and is_standing and punch_count=1 and not animation in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+		if(punchcombo1_finished and is_standing and punch_count=1 and not animation in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
 			[set(animation, 'punch2'),
 				set(punch_count, 2), 
 				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
@@ -185,7 +200,7 @@
 				set(last_attacked,cycle),
 			]),
 			
-		if(punchcombo2_finished and is_standing and punch_count=2 and not animation in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+		if(punchcombo2_finished and is_standing and punch_count=2 and not animation in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
 			[set(animation, 'punch3_charge'),
 			set(punch_count, 3),
 			set(last_attacked,cycle),
@@ -200,7 +215,7 @@
 			//]),
 			
 
-		if(animation in ['crouch'],  
+		if(animation in ['crouch', 'guard_crouch'],  
 			if(uppercut_finished,
 				[set(animation, 'beginuppercut'), set(last_attacked,cycle), spawn('miyamoto_playable.uppercut_proj',mid_x+20*facing,mid_y-25,{facing:facing})],
 				),
@@ -276,12 +291,13 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
 	on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
 	on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
 	on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), spawn('miyamoto_playable.punch_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
+	on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),set(last_attacked,cycle)]",
+	on_end_punch3_end_anim: "set(animation,'stand')",
 	
 	//CHARGE UP PUNCH; TO COME LATER
 	//on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), set(velocity_x, 500*facing)]",
 	
-	on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),set(last_attacked,cycle)]",
-	on_end_punch3_end_anim: "set(animation,'stand')",
+
 	
 	
 	on_end_axehandle_anim: "[spawn('miyamoto_playable.axehandle_proj',mid_x-10*facing,mid_y-45,{facing:facing,velocity_x:1000*facing,velocity_y:1000}),set(animation,'axehandle_hang')]",
@@ -290,8 +306,8 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
 	on_end_anim:"if(animation in ['punch1','punch2','punch3_charge'], if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch'), set(animation, 'guard_crouch'), set(animation, 'guard_stand')))",
 	on_end_walk_anim: "set(animation,animation)", //continues the animation
 	on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
-	//on_end_guard_stand_anim:"if(not('d' in ctrl_keys),set(animation,'stand'))",
-	//on_end_guard_crouch_anim:"if(ctrl_down and not('d' in ctrl_keys),set(animation,'crouch'))",
+	on_end_guard_stand_anim:"if(not('d' in ctrl_keys),set(animation,'stand'))",
+	on_end_guard_crouch_anim:"if(ctrl_down and not('d' in ctrl_keys),set(animation,'crouch'))",
 	on_end_jump_anim:"set(animation,'fall')",
 	on_end_prejump_anim:"set(animation,'jump')",
 	
@@ -331,7 +347,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		image: "playable/miyamoto-sheet.png",
 		accel_y: 40,
 		solid_area: [20,32,10,5],
-		body_area:"all",
+		body_area:[20,32,10,5],
 		pad: 3,
 		},
 		{
@@ -346,7 +362,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		rect: [1,37,32,69],
 		frames:4,
 		frames_per_row: 4,
-		duration: 12,
+		duration: 10,
 		},
 		{
 		id: "prejump",
@@ -390,6 +406,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		rect:[1,145,32,177],
 		frames:1,
 		frames_per_row: 1,
+		velocity_x: 0,
 		},
 		
 		//ATTACK ANIMATIONS*********************************
@@ -642,7 +659,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		},
 		{
 		id:"axehandle_proj",
-		on_create:"[schedule(7,die()),add(me.velocity_y,level.player.velocity_y)]",
+		on_create:"[schedule(9,die()),add(me.velocity_y,level.player.velocity_y)]",
 		animation: [{
 			id:"axehandle_proj",
 			image: "playable/miyamoto-sheet.png",
