Allowed enemy prototype to read from attack list with velocities.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "08B08B08",
+			"_addr": "09333D50",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -18,7 +18,7 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "0887AEB0",
+			"_addr": "093341E8",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_980",
@@ -27,7 +27,7 @@
 			"y": 256
 		},
 		{
-			"_addr": "0887B2F8",
+			"_addr": "0934EA90",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_2a05",
@@ -45,7 +45,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0887B740",
+			"_addr": "0934EED8",
 			"current_frame": "normal",
 			"custom": 1,
 			"face_right": 0,
@@ -55,7 +55,7 @@
 			"y": 2021
 		},
 		{
-			"_addr": "0887BB88",
+			"_addr": "0934F320",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_1314",
@@ -73,7 +73,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0887BFD0",
+			"_addr": "0934F768",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_5ab6",
@@ -91,7 +91,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0887C418",
+			"_addr": "092B92E8",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_b43",
@@ -109,7 +109,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "08955930",
+			"_addr": "092B9730",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_72af",
@@ -127,7 +127,7 @@
 			"y": 95
 		},
 		{
-			"_addr": "08955D78",
+			"_addr": "092B9B78",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_1326",
@@ -145,7 +145,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "089561C0",
+			"_addr": "092B9FC0",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_4e1",
@@ -163,7 +163,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "08956608",
+			"_addr": "092BA408",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_14fb",
@@ -179,6 +179,15 @@
 			},
 			"x": -64,
 			"y": 319
+		},
+		{
+			"_addr": "0985C1D0",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_49b7",
+			"type": "killah_bee",
+			"x": -448,
+			"y": 32
 		}
 	],
 	"dimensions": [-1280,-992,1983,2303],
