--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -9,13 +9,18 @@ properties: {
 //The get hurt function subtracts the current object's hitpoints by the attacking object's damage property
 //It then does a check to see if the hitpoints have reached 0.
 //If it has, then the current object dies.
-get_hurt: "def()[add(hitpoints, -collide_with.damage),
-			damage_flash(),
-			if(hitpoints <= 3,[
-				schedule(30, die()),
-			]),
-		]",
+get_hurt: "def(target, collide_with_area)
+			[add(hitpoints, -target.damage),
+				damage_flash(),
+				handle_knockback(target),
+					if(hitpoints <= 3,[
+						schedule(30, die()),
+					]),
+				]",
 
+handle_knockback: "def(target) 
+						debug('handling knockback ' + target.type + ' ' + attack_list[target.attack_name].velocity_x + ' ' + attack_list[target.attack_name].velocity_y)",		
+		
 		
 //This sets the object to turn red for a brief moment and then change back to a normal color again
 //It calls two other functions, red() and reset_color()			
@@ -55,7 +60,7 @@ reset_color: "def() [
 on_die: "sound('BombExplode.wav')",
 on_collide_object_body: "[[
 	if(collide_with_area = 'attack', 
-		get_hurt())], //if you are hit by a bullet, the get_hurt() function is called
+		get_hurt(collide_with, collide_with_area))], //if you are hit by a bullet, the get_hurt() function is called
 	 ]",
 		
 /*--SPAWNED OBJECTS--*/
