--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -274,13 +274,13 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
 //-----------------------------COLLISIONS----------------------------------
 	on_collide_object_body: "[
 		[if(arg.collide_with_area = 'projectile', 
-			[debug('Player was hit'), 
+			
 			take_damage(), //The player takes damage
-			])],
+			)],
 		[if(arg.collide_with_area = 'enemy', 
-			[debug('Ran into the enemy'), 
+			
 			take_damage(), //The Player takes damage
-			])] ]",
+			)] ]",
 
 
 //---------------------ON END ANIMATION ---------------------------------------
@@ -632,6 +632,11 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		id:"punch_proj",
 		on_create:"schedule(4,die())",
 		on_collide_object:"die()", //if it hits something, get rid of the punch
+		
+		properties: {
+			attack_name: "'punch1'",
+		},
+		
 		animation: [{
 			id:"punch_proj_normal",
 			image: "playable/miyamoto-sheet.png",
