Added velocity to basic attack abilities

--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -19,7 +19,10 @@ get_hurt: "def(target, collide_with_area)
 				]",
 
 handle_knockback: "def(target) 
-						debug('handling knockback ' + target.type + ' ' + attack_list[target.attack_name].velocity_x + ' ' + attack_list[target.attack_name].velocity_y)",		
+						//debug('handling knockback ' + target.type + ' ' + attack_list[target.attack_name].velocity_x + ' ' + attack_list[target.attack_name].velocity_y)
+						[add(velocity_x, attack_list[target.attack_name].velocity_x),
+						 add(velocity_y, attack_list[target.attack_name].velocity_y),
+						]",		
 		
 		
 //This sets the object to turn red for a brief moment and then change back to a normal color again
