Added beginnings of pre-death effects.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "09333D50",
+			"_addr": "093AEA78",
 			"current_frame": "normal",
 			"custom": 1,
 			"is_human": 1,
@@ -18,16 +18,7 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "093341E8",
-			"current_frame": "normal",
-			"custom": 1,
-			"label": "_980",
-			"type": "killah_bee",
-			"x": 608,
-			"y": 256
-		},
-		{
-			"_addr": "0934EA90",
+			"_addr": "093AF358",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_2a05",
@@ -45,17 +36,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0934EED8",
-			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
-			"label": "_6c5a",
-			"type": "killah_bee",
-			"x": 1475,
-			"y": 2021
-		},
-		{
-			"_addr": "0934F320",
+			"_addr": "093BEC98",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_1314",
@@ -73,7 +54,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "0934F768",
+			"_addr": "093B4CB0",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_5ab6",
@@ -91,7 +72,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "092B92E8",
+			"_addr": "093B50F8",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_b43",
@@ -109,7 +90,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "092B9730",
+			"_addr": "093B5540",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_72af",
@@ -127,7 +108,7 @@
 			"y": 95
 		},
 		{
-			"_addr": "092B9B78",
+			"_addr": "093B5988",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_1326",
@@ -145,7 +126,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "092B9FC0",
+			"_addr": "093B5DD0",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_4e1",
@@ -163,7 +144,7 @@
 			"y": 319
 		},
 		{
-			"_addr": "092BA408",
+			"_addr": "093B6218",
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_14fb",
@@ -180,15 +161,7 @@
 			"x": -64,
 			"y": 319
 		},
-		{
-			"_addr": "0985C1D0",
-			"current_frame": "normal",
-			"custom": 1,
-			"label": "_49b7",
-			"type": "killah_bee",
-			"x": -448,
-			"y": 32
-		}
+
 	],
 	"dimensions": [-1280,-992,1983,2303],
 	"id": "titlescreen.cfg",
@@ -220,16 +193,16 @@
 ,
 ,
 ,
-,
-,
-,
-,
-,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,,dgr,dgr,dgr
-,dgr,dgr,dgr
-,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+dbr,
+dbr,
+dbr,
+dbr,
+dbr,
+dbr,
+dbr,
+dbr,
+dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
 dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
