--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -14,14 +14,14 @@ get_hurt: "def(target, collide_with_area)
 				damage_flash(),
 				handle_knockback(target),
 					if(hitpoints <= 3,[
-						schedule(30, die()),
+//						schedule(30, die()),
 					]),
 				]",
 
 handle_knockback: "def(target) 
 						//debug('handling knockback ' + target.type + ' ' + attack_list[target.attack_name].velocity_x + ' ' + attack_list[target.attack_name].velocity_y)
-						[add(velocity_x, attack_list[target.attack_name].velocity_x),
-						 add(velocity_y, attack_list[target.attack_name].velocity_y),
+						[set(velocity_x, attack_list[target.attack_name].velocity_x),
+						 set(velocity_y, attack_list[target.attack_name].velocity_y),
 						]",		
 		
 		
