--- a/data/objects/enemies/killah_bee.cfg
+++ b/data/objects/enemies/killah_bee.cfg
@@ -7,7 +7,7 @@ id: "killah_bee",
 editor_info: {category: "enemies"},
 prototype: ["enemy_ground"],
 
-"hitpoints": 10,
+hitpoints: 10,
 
 
 on_create: "set(animation, 'idle_2')", //It doesn't activate until within range of the player
@@ -23,13 +23,14 @@ properties: {},
 		solid_area: [10, 17, 28, 61],
 		accel_y: 40,
 	},
-	{id: "idle",
+	{
+		id: "idle",
 		rect: [1, 1, 38, 62],	
 		body_area:"all",
 		frames: 15,
 		duration: 8,
 
-		},
+	},
 		
 	{
 		id: "idle_2",
