--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -29,7 +29,7 @@ var: [
 },
 prototype: ["enemy_ground"],
 
-"hitpoints": 3,
+hitpoints: 3,
 
 //vars are built in variables that aren't modified by the editor
 vars:{
@@ -40,6 +40,14 @@ vars:{
 	
 	},
 
+
+on_die: "def(string type) -> commands[
+		set(hitpoints, 1),
+		animation('death_light'),
+		debug('bam I worked'),
+		sound('deathtest.wav'),
+		//add(hitpoints,-1),
+		]", 
 
 
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
@@ -52,7 +60,6 @@ on_end_idle_anim: "[
 			set(animation, 'triggered'))
 			]",
 on_enter_walk_anim:"[
-					//debug('Im walking here!'),
 					if(velocity_x > 0, set(facing, -1)),
 					if(velocity_x < 0, set(facing, 1)),
 					walk_towards(),
@@ -83,8 +90,7 @@ properties: {
 		set(me.velocity_x, xVel),
 		//debug('walking at you, bro'),
 		]
-		where xVel = (325*cos(lib.math.angle(me,level.player)))",
-
+		where xVel = (325*cos(lib.math.angle(me,level.player)))",		
 },
 
 	animation: [
