--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -529,7 +529,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		frames_per_row: 1,
 		duration: 6,
 		},
-		{
+		{		
 		id: "jumping_kick",
     	rect: [141,1,172,33],
 		frames:1,
@@ -649,6 +649,11 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"uppercut_proj",
 		on_create:"schedule(10,die())",
+		
+		properties: {
+			attack_name: "'uppercut_projectile'",
+		},
+		
 		animation: [{
 			id:"uppercut_proj_normal",
 			image: "playable/miyamoto-sheet.png",
@@ -665,6 +670,11 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"axehandle_proj",
 		on_create:"[schedule(9,die()),add(me.velocity_y,level.player.velocity_y)]",
+		
+		properties: {
+			attack_name: "'axehandle'",
+		},
+		
 		animation: [{
 			id:"axehandle_proj",
 			image: "playable/miyamoto-sheet.png",
@@ -690,13 +700,18 @@ on_end_endstomp_anim:"set(animation,'stand')",
 			pad:3,
 			duration: 1,
 			area: "all",
-			attack_area: "all", 
+			attack_area: "none", 
 			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
 			}],
 		},
 		{
 		id:"stomp_proj",
 		on_create:"schedule(15,die())",
+		
+		properties: {
+			attack_name: "'emperor_stomp'",
+		},
+		
 		animation: [{
 			id:"stomp_proj",
 			image: "playable/miyamoto-sheet.png",
