Added death animation skeleton.

--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -41,12 +41,12 @@ vars:{
 	},
 
 
-on_die: "def(string type) -> commands[
+on_die: "[
 		set(hitpoints, 1),
 		animation('death_light'),
 		debug('bam I worked'),
 		sound('deathtest.wav'),
-		//add(hitpoints,-1),
+		schedule(50,[remove_object(me)]),
 		]", 
 
 
