Added a new prototype for player attacks, and converted the enemy_ground prototype to strict mode.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -23,14 +23,11 @@
 			"custom": 1,
 			"label": "_2a05",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 278,
-				"x_bound": 28,
-				"y2_bound": 493,
-				"y_bound": 243
+			"property_data": {
+				"_x2_bound": 278,
+				"_x_bound": 28,
+				"_y2_bound": 493,
+				"_y_bound": 243
 			},
 			"x": 128,
 			"y": 319
@@ -41,14 +38,11 @@
 			"custom": 1,
 			"label": "_1314",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 214,
-				"x_bound": -36,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 214,
+				"_x_bound": -36,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": 42,
 			"y": 319
@@ -59,14 +53,11 @@
 			"custom": 1,
 			"label": "_5ab6",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 150,
-				"x_bound": -100,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 150,
+				"_x_bound": -100,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": 16,
 			"y": 319
@@ -77,14 +68,11 @@
 			"custom": 1,
 			"label": "_b43",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 342,
-				"x_bound": 92,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 342,
+				"_x_bound": 92,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": 208,
 			"y": 319
@@ -95,14 +83,11 @@
 			"custom": 1,
 			"label": "_72af",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": -810,
-				"x_bound": -1060,
-				"y2_bound": 206,
-				"y_bound": -44
+			"property_data": {
+				"_x2_bound": -810,
+				"_x_bound": -1060,
+				"_y2_bound": 206,
+				"_y_bound": -44
 			},
 			"x": -960,
 			"y": 95
@@ -113,14 +98,11 @@
 			"custom": 1,
 			"label": "_1326",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 406,
-				"x_bound": 156,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 406,
+				"_x_bound": 156,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": 256,
 			"y": 319
@@ -131,14 +113,11 @@
 			"custom": 1,
 			"label": "_4e1",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 118,
-				"x_bound": -132,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 118,
+				"_x_bound": -132,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": -32,
 			"y": 319
@@ -149,14 +128,11 @@
 			"custom": 1,
 			"label": "_14fb",
 			"type": "knife_thug",
-			"vars": {
-				"last_triggered": -400,
-				"triggered": false,
-				"type": "int",
-				"x2_bound": 86,
-				"x_bound": -164,
-				"y2_bound": 470,
-				"y_bound": 220
+			"property_data": {
+				"_x2_bound": 86,
+				"_x_bound": -164,
+				"_y2_bound": 470,
+				"_y_bound": 220
 			},
 			"x": -64,
 			"y": 319
