--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -5,48 +5,35 @@ TO ADD LATER
 
 {
 id: "knife_thug",
-editor_info: {category: "enemies",
-//var is treated like vars, but is able to be changed in the editor
-var: [
-		{
-			name: "x_bound",
-			type: "x",
-			value: "x-100",
-		},{
-			name: "x2_bound",
-			type: "x",
-			value: "x+150",
-		},{
-			name: "y_bound",
-			type: "y",
-			value: "y-100",
-		},{
-			name: "y2_bound",
-			type: "y",
-			value: "y+150",
-		},
-	],
-},
+editor_info: {category: "enemies"},
 prototype: ["enemy_ground"],
 
 hitpoints: 3,
 
-//vars are built in variables that aren't modified by the editor
-vars:{
-	
-	last_triggered: -400,
-	type: "int",
-	triggered: false,
-	
-	},
+properties: {
+#-------------------------- vars --------------------------#
+	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" } },
+	_x2_bound: { type: "int", editor_info: { type: "x", value: "x+150" } },
+	_y_bound: { type: "int", editor_info: { type: "y", value: "y-100" } },
+	_y2_bound: { type: "int", editor_info: { type: "y", value: "y+150" } },
 
+	_triggered: { type: "bool", init: "false" },
+	_last_triggered: { type: "int", init: "-400" },
+
+#-------------------------- functions --------------------------#
+	walk_towards: "def() -> commands [
+		set(me.velocity_x, xVel),
+		//debug('walking at you, bro'),
+		]
+		where xVel = (325*cos(lib.math.angle(me,level.player)))",		
+},
 
 on_die: "[
 		set(hitpoints, 1),
 		animation('death_light'),
 		debug('bam I worked'),
 		sound('deathtest.wav'),
-		schedule(50,[remove_object(me)]),
+		//add(hitpoints,-1),
 		]", 
 
 
@@ -54,9 +41,9 @@ on_create: "set(animation, 'idle')", //It doesn't activate until within range of
 
 //on the idle animation, it can branch depending on if the enemy has been triggered or not. 
 on_end_idle_anim: "[
-		if(not vars.triggered, 
+		if(not _triggered, 
 			set(animation, 'idle')), 
-		if(vars.triggered, 
+		if(_triggered, 
 			set(animation, 'triggered'))
 			]",
 on_enter_walk_anim:"[
@@ -70,28 +57,19 @@ on_end_walk_anim:"set(animation, 'walk')",
 on_triggered: "[
 	//debug('knife thug has been triggered'),
 	//by setting the trigger status to true, we can activate the enemy animation. See on process for details
-	set(triggered, true),
+	set(_triggered, true),
 ]",
 					
 
 //First, we are going to check to see if the player has walked into our midsts.
 //if it has, then we call the "triggered" function
 on_process: "[ 
-	if(not vars.triggered and  level.player.midpoint_x > vars.x_bound and level.player.midpoint_x < vars.x2_bound  and level.player.midpoint_y > vars.y_bound and level.player.midpoint_y < vars.y2_bound and cycle - vars.last_triggered > 250, 
-		[fire_event('triggered'),set(vars.last_triggered,cycle)]
+	if(not _triggered and  level.player.midpoint_x > _x_bound and level.player.midpoint_x < _x2_bound  and level.player.midpoint_y > _y_bound and level.player.midpoint_y < _y2_bound and cycle - _last_triggered > 250, 
+		[fire_event('triggered'),set(_last_triggered,cycle)]
 	),
 ]",
 
 
-
-
-properties: {
-	walk_towards: "def()[
-		set(me.velocity_x, xVel),
-		//debug('walking at you, bro'),
-		]
-		where xVel = (325*cos(lib.math.angle(me,level.player)))",		
-},
 
 	animation: [
 	{"@base": true,
