--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -632,6 +632,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		id:"punch_proj",
 		on_create:"schedule(4,die())",
 		on_collide_object:"die()", //if it hits something, get rid of the punch
+		prototype: ["player_attack"],
 		
 		properties: {
 			attack_name: "'punch1'",
@@ -649,6 +650,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"uppercut_proj",
 		on_create:"schedule(10,die())",
+		prototype: ["player_attack"],
 		
 		properties: {
 			attack_name: "'uppercut_projectile'",
@@ -670,6 +672,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"axehandle_proj",
 		on_create:"[schedule(9,die()),add(me.velocity_y,level.player.velocity_y)]",
+		prototype: ["player_attack"],
 		
 		properties: {
 			attack_name: "'axehandle'",
@@ -691,6 +694,12 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"axehandle_proj_start",
 		on_create:"[schedule(5,die()),add(me.velocity_y,level.player.velocity_y)]",
+		prototype: ["player_attack"],
+		
+		properties: {
+			attack_name: "'axehandle'",
+		},
+
 		animation: [{
 			id:"axehandle_proj_start",
 			image: "playable/miyamoto-sheet.png",
@@ -707,6 +716,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		{
 		id:"stomp_proj",
 		on_create:"schedule(15,die())",
+		prototype: ["player_attack"],
 		
 		properties: {
 			attack_name: "'emperor_stomp'",
