Updated some enemy behaviors upon being hit by specific attacks.

--- a/data/object_prototypes/enemy_ground.cfg
+++ b/data/object_prototypes/enemy_ground.cfg
@@ -14,17 +14,28 @@ get_hurt: "def(obj player_attack attacker, string collide_with_area) -> commands
 			[add(hitpoints, -attacker.damage),
 				damage_flash(),
 				handle_knockback(attacker),
-					if(hitpoints <= 3,[
-//						schedule(30, die()),
-					]),
 				]",
 
 handle_knockback: "def(obj player_attack attacker) -> commands
 						//debug('handling knockback ' + attacker.type + ' ' + attack_list[attacker.attack_name].velocity_x + ' ' + attack_list[attacker.attack_name].velocity_y)
 						[set(velocity_x, attack_list[attacker.attack_name].velocity_x),
 						 set(velocity_y, attack_list[attacker.attack_name].velocity_y),
-						]",		
-		
+						]",	
+
+handle_knockback_death: "def(obj player_attack attacker) -> commands
+						//debug('handling knockback death' + attacker.type + ' ' + attack_list[attacker.attack_name].velocity_x + ' ' + attack_list[attacker.attack_name].velocity_y)
+						[set(velocity_x, attack_list[attacker.attack_name].velocity_x),
+						 set(velocity_y, attack_list[attacker.attack_name].velocity_y),
+						]",							
+	
+on_die: "[
+		set(hitpoints, 1),
+		animation('death_light'),
+		debug('bam I worked'),
+		sound('deathtest.wav'),
+		schedule(30,set(hitpoints,0)),
+		]", 
+
 		
 //This sets the object to turn red for a brief moment and then change back to a normal color again
 //It calls two other functions, red() and reset_color()			
@@ -61,7 +72,6 @@ reset_color: "def() -> commands [
 },
 
 //When this enemy blows up, spawn an explosion object for effect
-on_die: "sound('BombExplode.wav')",
 on_collide_object_body: "[
 		if(arg.collide_with_area = 'attack' and arg.collide_with is obj player_attack, 
 			get_hurt(arg.collide_with, arg.collide_with_area)
