--- a/data/object_prototypes/force_list.cfg
+++ b/data/object_prototypes/force_list.cfg
@@ -5,7 +5,7 @@
 	properties: {
 
 		attack_list:"{
-			'punch1':{velocity_x:1000, velocity_y:0, damage_type:'attack_light'}, 
+			'punch1':{velocity_x:1000*facing, velocity_y:0, damage_type:'attack_light'}, 
 			'punch2':{velocity_x:-200*facing, velocity_y:-100, damage_type:'attack_light'}, 
 			'punch3':{velocity_x:-400*facing, velocity_y:-200, damage_type:'attack_medium'},
 			'uppercut' :{velocity_x:-50*facing, velocity_y:-100, damage_type:'attack_light'},	
