--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -195,7 +195,7 @@
 		if(punchcombo1_finished and is_standing and punch_count=1 and not animation in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
 			[set(animation, 'punch2'),
 				set(punch_count, 2), 
-				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
+				spawn('miyamoto_playable.punch2_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
 				set(velocity_x,0),
 				set(last_attacked,cycle),
 			]),
@@ -290,7 +290,7 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
 	on_end_enduppercut_anim:"set(animation, 'crouch')",
 	on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
 	on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
-	on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), spawn('miyamoto_playable.punch_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
+	on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
 	on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),set(last_attacked,cycle)]",
 	on_end_punch3_end_anim: "set(animation,'stand')",
 	
@@ -476,7 +476,6 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		id: "risingstar_end",
 		rect: [71,366,102,403],
 		solid_area: [20,37,10,5],
-		attack_area: "all", 
 		frames:2,
 		frames_per_row: 2,
 		duration: 2,
@@ -485,7 +484,6 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		id: "beginuppercut",
 		rect: [1,325,32,362],
 		solid_area: [20,37,10,5],
-		attack_area: "all", 
 		frames:2,
 		frames_per_row: 2,
 		duration: 2,
@@ -647,6 +645,47 @@ on_end_endstomp_anim:"set(animation,'stand')",
 			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
 			}],
 		},
+		
+		{
+		id:"punch2_proj",
+		on_create:"schedule(4,die())",
+		on_collide_object:"die()", //if it hits something, get rid of the punch
+		prototype: ["player_attack"],
+		
+		properties: {
+			attack_name: "'punch2'",
+		},
+		
+		animation: [{
+			id:"punch2_proj_normal",
+			image: "playable/miyamoto-sheet.png",
+			rect: [14,109,23,118],
+			area: "all",
+			attack_area: "all", 
+			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
+			}],
+		},
+		
+		{
+		id:"punch3_proj",
+		on_create:"schedule(4,die())",
+		on_collide_object:"die()", //if it hits something, get rid of the punch
+		prototype: ["player_attack"],
+		
+		properties: {
+			attack_name: "'punch3'",
+		},
+		
+		animation: [{
+			id:"punch3_proj_normal",
+			image: "playable/miyamoto-sheet.png",
+			rect: [1,122,13,134],
+			area: "all",
+			attack_area: "all", 
+			damage: 1, //how much damage it does. Can change later. Maybe stronger punches can do more damage.
+			}],
+		},
+		
 		{
 		id:"uppercut_proj",
 		on_create:"schedule(10,die())",
