--- a/data/objects/enemies/knife_thug.cfg
+++ b/data/objects/enemies/knife_thug.cfg
@@ -23,18 +23,10 @@ properties: {
 #-------------------------- functions --------------------------#
 	walk_towards: "def() -> commands [
 		set(me.velocity_x, xVel),
-		//debug('walking at you, bro'),
 		]
 		where xVel = (325*cos(lib.math.angle(me,level.player)))",		
 },
 
-on_die: "[
-		set(hitpoints, 1),
-		animation('death_light'),
-		debug('bam I worked'),
-		sound('deathtest.wav'),
-		//add(hitpoints,-1),
-		]", 
 
 
 on_create: "set(animation, 'idle')", //It doesn't activate until within range of the player
@@ -107,6 +99,7 @@ on_process: "[
 		id: "death_light",
 		rect: [71, 37, 102, 69],	
 		body_area:"none",
+		enemy_area:"none",
 		frames: 1,
 		duration: 5,
 		},
