Fixed key:value error

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -175,7 +175,7 @@
 		if((ctrl_down and ctrl_tongue) and self.animation not in ['axehandle'] and self.animation in ['jump', 'fall'],
 			[
 			set(animation, 'axehandle'),
-			spawn('miyamoto_playable.axehandle_proj_start',mid_x+5*facing,mid_y-35,{facing:facing, miyamoto_playable.velocity_y})]),
+			spawn('miyamoto_playable.axehandle_proj_start',mid_x+5*facing,mid_y-35,{facing:facing, velocity_y: miyamoto_playable.velocity_y})]),
 
 	
 			
