Making strict-mode compliant :tada:

--- a/data/objects/enemies/killah_bee.cfg
+++ b/data/objects/enemies/killah_bee.cfg
@@ -6,6 +6,7 @@ TO ADD LATER
 id: "killah_bee",
 editor_info: {category: "enemies"},
 prototype: ["enemy_ground"],
+is_strict: true,
 
 hitpoints: 10,
 
