--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -1,6 +1,6 @@
 {
 	id: "miyamoto_playable",
-	//is_strict: true,
+	is_strict: true,
 	is_human: true,
 	hitpoints: 4,
 	zorder: 1,
@@ -38,13 +38,13 @@
 		type:"int",
 		default: 0,
 		},
-		punch_finished:"cycle - last_attacked > 16",
-		punchcombo1_finished:"cycle - last_attacked < 16",
-		punchcombo2_finished:"cycle - last_attacked < 16",
-		uppercut_finished:"cycle - last_uppercut > 24",
-		risingstar_finish:"cycle - last_risingstar > 24",
-		backjump_finished:"cycle - last_backjumped > 32",
-		stomp_finished:"cycle - last_stomped > 32",
+		punch_finished:"bool::cycle - last_attacked > 16",
+		punchcombo1_finished:"bool::cycle - last_attacked < 16",
+		punchcombo2_finished:"bool::cycle - last_attacked < 16",
+		uppercut_finished:"bool::cycle - last_uppercut > 24",
+		risingstar_finish:"bool::cycle - last_risingstar > 24",
+		backjump_finished:"bool::cycle - last_backjumped > 32",
+		stomp_finished:"bool::cycle - last_stomped > 32",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
 
@@ -52,11 +52,10 @@
 	#-------Damage Based Functions-------#
 	//Function that initiates an invincibility check, damage calculation, and hurt animations.
 	
-		take_damage: "def()[
+		take_damage: "def()->commands[
 				//if you aren't currently invincible, take damage
 				if(not self.invincible,[
 				//NEED TO FIX
-					dump(arg.collide_with_damage),
 					take_knockback(),
 					//add(me.hitpoints, -collide_with.damage), //subtract hitpoints
 					if(me.hitpoints <= 0, die()),
@@ -66,7 +65,7 @@
 	
 	//This starts the knockback animation that also makes the player go flying.
 	
-		take_knockback: "def()[
+		take_knockback: "def()->commands[
 			set(velocity_y, -500),
 			set(velocity_x, (-facing * 250)),
 			//if(collide_with.damage > threshold, set animation, set other animation)
@@ -76,7 +75,7 @@
 		//This sets the object to turn red for a brief moment and then change back to a normal color again
 		//It calls two other functions, set_red() and reset_color()			
 		
-			damage_flash: "def() [
+			damage_flash: "def()->commands[
 			set_red(), 						// turns the enemy red
 			schedule(3, reset_color()),	//back to normal
 			schedule(6, set_red()), 		//and red again
@@ -84,14 +83,14 @@
 			]",
 
 		//This sets the red channel to full and lowers the other two channels	
-		set_red: "def()[
+		set_red: "def()->commands[
 				set(me.red, 255),
 				set(me.blue, 100),
 				set(me.green, 100),
 				]",
 
 		//This sets all color channels  back to normal
-		reset_color: "def() [
+		reset_color: "def()->commands [
 				set(me.red, 255),
 				set(me.blue, 255),
 				set(me.green, 255),
@@ -104,12 +103,14 @@
 		kick_animations: "['flying_kick_start', 'flying_kick', 'jumping_kick_start', 'jumping_kick']",
 		punch_animations: "['punch1', 'punch2', 'punch3_charge', 'punch3', 'punch3_end']",
 		jump_animations: "['prejump', 'jump', 'fall']",
-		attack_animations: "punch_animations + uppercut_animations + kick_animations + stomp_animations",
+		attack_animations: "[string]::punch_animations + uppercut_animations + kick_animations + stomp_animations",
 
 	
 	#-------Health & Stamina-------#
 	
-	mana_costs: "{	'punch2' : 1, 'super_punch2' : 2, 'punch3' : 1, 'super_punch3' : 2, 'charged_punch3' : 4, 'rising_star' : 2, 'super_rising_star' : 4,
+	mana: {type:"int", default: 100},
+	// Todo, move list of moves to a file and have all info about moves in there instead of here.
+	mana_costs: "{string->int}::{	'punch2' : 1, 'super_punch2' : 2, 'punch3' : 1, 'super_punch3' : 2, 'charged_punch3' : 4, 'rising_star' : 2, 'super_rising_star' : 4,
 					'charged_rising_star': 5, 'emperor_stomp': 6, 'god_emperor_stomp': 10, 'boomerang': 3, 'kaboomerang': 6,
 					'guard': 1, 'backjump': 2,
 				}",
@@ -175,7 +176,7 @@
 		if((ctrl_down and ctrl_tongue) and self.animation not in ['axehandle'] and self.animation in ['jump', 'fall'],
 			[
 			set(animation, 'axehandle'),
-			spawn('miyamoto_playable.axehandle_proj_start',mid_x+5*facing,mid_y-35,{facing:facing, velocity_y: miyamoto_playable.velocity_y})]),
+			spawn('miyamoto_playable.axehandle_proj_start',mid_x+5*facing,mid_y-35,{facing:me.facing, velocity_y:me.velocity_y})]),
 
 	
 			
@@ -290,7 +291,7 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
 	on_end_enduppercut_anim:"set(animation, 'crouch')",
 	on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
 	on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
-	on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
+	on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), 				  spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
 	on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),set(last_attacked,cycle)]",
 	on_end_punch3_end_anim: "set(animation,'stand')",
 	
@@ -633,7 +634,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'punch1'",
+			attack_name: "string::'punch1'", //Todo maybe refactor to enums
 		},
 		
 		animation: [{
@@ -653,7 +654,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'punch2'",
+			attack_name: "string::'punch2'",
 		},
 		
 		animation: [{
@@ -673,7 +674,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'punch3'",
+			attack_name: "string::'punch3'",
 		},
 		
 		animation: [{
@@ -692,7 +693,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'uppercut_projectile'",
+			attack_name: "string::'uppercut_projectile'",
 		},
 		
 		animation: [{
@@ -714,7 +715,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'axehandle'",
+			attack_name: "string::'axehandle'",
 		},
 		
 		animation: [{
@@ -736,7 +737,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'axehandle'",
+			attack_name: "string::'axehandle'",
 		},
 
 		animation: [{
@@ -758,7 +759,7 @@ on_end_endstomp_anim:"set(animation,'stand')",
 		prototype: ["player_attack"],
 		
 		properties: {
-			attack_name: "'emperor_stomp'",
+			attack_name: "string::'emperor_stomp'",
 		},
 		
 		animation: [{
